// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Tests Buttons can be disabled 1`] = `
{
  "Automation Tree": {
    "AutomationId": "disabled_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": false,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(249, 249, 249, 77)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  1,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Opacity": 1,
            "Size": [
              1030,
              37,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1030,
          37,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              1012,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1012,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "disabled_button",
    "Opacity": 1,
    "Size": [
      1030,
      37,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have accessibility labels 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityLabel_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(0, 122, 255, 255)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  1,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Opacity": 1,
            "Size": [
              1030,
              37,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1030,
          37,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              1012,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1012,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessibilityLabel_button",
    "Opacity": 1,
    "Size": [
      1030,
      37,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have accessibility props 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibility_props",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "Submit Button",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          4,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1022,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          4,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1,
          28,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          5,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1022,
          2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          5,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1,
          28,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              1012,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1012,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessibility_props",
    "Opacity": 1,
    "Size": [
      1030,
      37,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have accessibility states 1`] = `
{
  "Automation Tree": {
    "AutomationId": "accessibilityState_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": false,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": false,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(249, 249, 249, 77)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  1,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 15)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Opacity": 1,
            "Size": [
              1030,
              37,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1030,
          37,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              1012,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1012,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "accessibilityState_button",
    "Opacity": 1,
    "Size": [
      1030,
      37,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons can have custom colors 1`] = `
{
  "Automation Tree": {
    "AutomationId": "cancel_button",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Cancel Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to cancel your application!",
  },
  "Visual Tree": {
    "Children": [
      {
        "Children": [
          {
            "Brush": {
              "Brush Type": "ColorBrush",
              "Color": "rgba(255, 59, 48, 255)",
            },
            "Children": [
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  1,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  4,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1022,
                  2,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  4,
                  5,
                ],
                "Visual Type": "SpriteVisual",
              },
              {
                "Brush": {
                  "Brush Type": "ColorBrush",
                  "Color": "rgba(0, 0, 0, 41)",
                },
                "Opacity": 1,
                "Size": [
                  1,
                  28,
                ],
                "Visual Type": "SpriteVisual",
              },
            ],
            "Opacity": 1,
            "Size": [
              1030,
              37,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1030,
          37,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              1012,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1012,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "cancel_button",
    "Opacity": 1,
    "Size": [
      1030,
      37,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;

exports[`Button Tests Buttons have default styling 1`] = `
{
  "Automation Tree": {
    "AutomationId": "button_default_styling",
    "Children": [
      {
        "AutomationId": "",
        "ControlType": 50020,
        "HelpText": "",
        "IsEnabled": true,
        "IsKeyboardFocusable": false,
        "LocalizedControlType": "text",
        "Name": "Submit Application",
      },
    ],
    "ControlType": 50000,
    "HelpText": "",
    "IsEnabled": true,
    "IsKeyboardFocusable": true,
    "LocalizedControlType": "button",
    "Name": "Press to submit your application!",
  },
  "Visual Tree": {
    "Brush": {
      "Brush Type": "ColorBrush",
      "Color": "rgba(255, 255, 255, 179)",
    },
    "Children": [
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          4,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1022,
          1,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          4,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1,
          28,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          5,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1022,
          2,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          4,
          5,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Brush": {
          "Brush Type": "ColorBrush",
          "Color": "rgba(0, 0, 0, 41)",
        },
        "Opacity": 1,
        "Size": [
          1,
          28,
        ],
        "Visual Type": "SpriteVisual",
      },
      {
        "Children": [
          {
            "Opacity": 1,
            "Size": [
              1012,
              20,
            ],
            "Visual Type": "SpriteVisual",
          },
          {
            "Opacity": 1,
            "Size": [
              0,
              0,
            ],
            "Visual Type": "SpriteVisual",
          },
        ],
        "Opacity": 1,
        "Size": [
          1012,
          20,
        ],
        "Visual Type": "SpriteVisual",
      },
    ],
    "Comment": "button_default_styling",
    "Opacity": 1,
    "Size": [
      1030,
      37,
    ],
    "Visual Type": "SpriteVisual",
  },
}
`;
